--- a/Scripts/Morphology_dev.ipynb
+++ b/Scripts/Morphology_dev.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e620246b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b8ca94ff",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "20aa52b3",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e7b2ef48",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "63274fa6",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "9272628d",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "813f0b5b",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "<PIL.Image.Image image mode=RGB size=800x315>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "a40e1fcd",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "07630896",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "<PIL.Image.Image image mode=L size=800x315>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "91179745",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "<PIL.Image.Image image mode=RGB size=800x315>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "13072583",
    "metadata": {},
    "outputs": [
@@ -282,19 +282,19 @@
        "<PIL.Image.Image image mode=RGB size=800x315>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Visualize the bbox for multiple traits\n",
-    "Vis_morpho.visualize_multi_bbox([\"trunk\", \"c\"])"
+    "Vis_morpho.visualize_multi_bbox([\"trunk\", \"caudal_fin\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "ae9eb407",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        " 'trunk': {'number': 2, 'percentage': 0.9921203180657}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "b24d03d1",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "{'SL_bbox': 587, 'HL_bbox': 152, 'ED_bbox': 31, 'pOD_bbox': 30, 'FA_pca': 0.0}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "e5d892d3",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        " 'FA_lm': -0.78}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "fe183e51",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "{'EA_m': 921, 'HA_m': 16034}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "201ecfe1",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        " 'FA_lm': -0.78}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,29 +433,6 @@
     "list_measure= ['base_name','SL_bbox', 'SL_lm', 'HL_bbox', 'HL_lm', 'pOD_bbox', 'pOD_lm', 'ED_bbox', 'ED_lm', 'HH_lm', 'EA_m','HA_m','FA_pca', 'FA_lm']\n",
     "measurement = {k:measurement[k] for k in list_measure}\n",
     "measurement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "8b7d1b1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'img_landmark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [27]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Visualize landmarks \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mimg_landmark\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'img_landmark' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Visualize landmarks \n",
-    "img_landmark"
    ]
   },
   {
